feat: improves the business rules and prepares to handle exceptions